first version, without operations
