# controllers/ManifestService.js
@@ -3,7 +3,7 @@
 var manifest = require('./loadManifest.js').load('api/manifest.yaml');
 var moduleInfo = require('./loadManifest.js').load('package.json');
 
-exports.apiV1ModelsGET = function(args, res, next) {
+exports.apiV2ModelsGET = function(args, res, next) {
   /**
    * parameters expected in the args:
   **/
@@ -13,18 +13,18 @@ exports.apiV1ModelsGET = function(args, res, next) {
   }
   else {
     res.status(500)
-    res.end('Something fails. It has been imposible to load manifest.yaml');
+    res.end('Something fails. It has not been imposible to load manifest.yaml');
   }
   
   
 }
 
-exports.apiV1ModelsModelIdGET = function(args, res, next) {
+exports.apiV2ModelsModelIdGET = function(args, res, next) {
   /**
    * parameters expected in the args:
   * modelId (String)
   **/
-  
+
   if(args.modelId) {
     var model = args.modelId.value;
     if(manifest){
@@ -33,11 +33,16 @@ exports.apiV1ModelsModelIdGET = function(args, res, next) {
           res.json(manifest.models[m]);   
         }
       }
+      res.status(404);
+      res.end('Model with id='+ model + ' does not exist.')
+    }else{
+      res.status(500);
+      res.end('Something fails. It has not been imposible to load manifest.yaml');
     }
   }
   else {
-    res.status(500)
-    res.end('Something fails. It has been imposible to load manifest.yaml');
+    res.status(400)
+    res.end('{modelId} parameter is required');
   }
   
   
@@ -53,7 +58,7 @@ exports.manifestGET = function(args, res, next) {
   }
   else {
     res.status(500)
-    res.end('Something fails. It has been imposible to load manifest.yaml');
+    res.end('Something fails. It has not been imposible to load manifest.yaml');
   }
   
   
@@ -69,7 +74,7 @@ exports.versionGET = function(args, res, next) {
   }
   else {
     res.status(500)
-    res.end('Something fails. It has been imposible to load manifest.yaml');
+    res.end('Something fails. It has not been imposible to load manifest.yaml');
   }
   
   
