# controllers/Syntax.js
@@ -6,30 +6,26 @@ var url = require('url');
 var Syntax = require('./SyntaxService');
 
 
-module.exports.apiV1ModelsModelIdSyntaxesGET = function apiV1ModelsModelIdSyntaxesGET (req, res, next) {
-  Syntax.apiV1ModelsModelIdSyntaxesGET(req.swagger.params, res, next);
+module.exports.apiV2ModelsModelIdSyntaxesGET = function apiV2ModelsModelIdSyntaxesGET (req, res, next) {
+  Syntax.apiV2ModelsModelIdSyntaxesGET(req.swagger.params, res, next);
 };
 
-module.exports.apiV1ModelsModelIdSyntaxesSyntaxIdCheckPOST = function apiV1ModelsModelIdSyntaxesSyntaxIdCheckPOST (req, res, next) {
-  Syntax.apiV1ModelsModelIdSyntaxesSyntaxIdCheckPOST(req.swagger.params, res, next);
+module.exports.apiV2ModelsModelIdSyntaxesSyntaxIdCheckPOST = function apiV2ModelsModelIdSyntaxesSyntaxIdCheckPOST (req, res, next) {
+  Syntax.apiV2ModelsModelIdSyntaxesSyntaxIdCheckPOST(req.swagger.params, res, next);
 };
 
-module.exports.apiV1ModelsModelIdSyntaxesSyntaxIdGET = function apiV1ModelsModelIdSyntaxesSyntaxIdGET (req, res, next) {
-  Syntax.apiV1ModelsModelIdSyntaxesSyntaxIdGET(req.swagger.params, res, next);
+module.exports.apiV2ModelsModelIdSyntaxesSyntaxIdGET = function apiV2ModelsModelIdSyntaxesSyntaxIdGET (req, res, next) {
+  Syntax.apiV2ModelsModelIdSyntaxesSyntaxIdGET(req.swagger.params, res, next);
 };
 
-module.exports.apiV1ModelsModelIdSyntaxesSyntaxIdModeGET = function apiV1ModelsModelIdSyntaxesSyntaxIdModeGET (req, res, next) {
-  Syntax.apiV1ModelsModelIdSyntaxesSyntaxIdModeGET(req.swagger.params, res, next);
+module.exports.apiV2ModelsModelIdSyntaxesSyntaxIdModeGET = function apiV2ModelsModelIdSyntaxesSyntaxIdModeGET (req, res, next) {
+  Syntax.apiV2ModelsModelIdSyntaxesSyntaxIdModeGET(req.swagger.params, res, next);
 };
 
-module.exports.apiV1ModelsModelIdSyntaxesSyntaxIdThemeGET = function apiV1ModelsModelIdSyntaxesSyntaxIdThemeGET (req, res, next) {
-  Syntax.apiV1ModelsModelIdSyntaxesSyntaxIdThemeGET(req.swagger.params, res, next);
+module.exports.apiV2ModelsModelIdSyntaxesSyntaxIdThemeGET = function apiV2ModelsModelIdSyntaxesSyntaxIdThemeGET (req, res, next) {
+  Syntax.apiV2ModelsModelIdSyntaxesSyntaxIdThemeGET(req.swagger.params, res, next);
 };
 
-module.exports.apiV1ModelsModelIdSyntaxesSyntaxIdTranslateGET = function apiV1ModelsModelIdSyntaxesSyntaxIdTranslateGET (req, res, next) {
-  Syntax.apiV1ModelsModelIdSyntaxesSyntaxIdTranslateGET(req.swagger.params, res, next);
-};
-
-module.exports.apiV1ModelsModelIdSyntaxesSyntaxIdTranslatePOST = function apiV1ModelsModelIdSyntaxesSyntaxIdTranslatePOST (req, res, next) {
-  Syntax.apiV1ModelsModelIdSyntaxesSyntaxIdTranslatePOST(req.swagger.params, res, next);
+module.exports.apiV2ModelsModelIdSyntaxesSyntaxIdTranslatePOST = function apiV2ModelsModelIdSyntaxesSyntaxIdTranslatePOST (req, res, next) {
+  Syntax.apiV2ModelsModelIdSyntaxesSyntaxIdTranslatePOST(req.swagger.params, res, next);
 };
