# controllers/SyntaxService.js
@@ -1,63 +1,119 @@
 'use strict';
 
-exports.apiV1ModelsModelIdSyntaxesGET = function(args, res, next) {
+var manifest = require('./loadManifest.js').load('api/manifest.yaml');
+var moduleInfo = require('./loadManifest.js').load('package.json');
+var operations = require('../operations.js');
+var fs = require('fs');
+
+exports.apiV2ModelsModelIdSyntaxesGET = function(args, res, next) {
   /**
    * parameters expected in the args:
   * modelId (String)
   **/
-  
-  
-  var examples = {};
-  examples['application/json'] = [ {
-  "readOnly" : true,
-  "id" : "aeiou"
-} ];
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+
+  if(args.modelId) {
+    var model = args.modelId.value;
+    if(manifest){
+      for(var m in manifest.models){
+        if(manifest.models[m].id == model){
+          res.json(manifest.models[m].syntaxes);   
+        }
+      }
+      res.status(404);
+      res.end('Model with id='+ model + ' does not exist.');
+    }else{
+      res.status(500);
+      res.end('Something fails. It has not been imposible to load manifest.yaml');
+    }
+
+  }else {
+    res.status(400);
+    res.end('{modelId} parameter is required');
   }
-  else {
-    res.end();
-  }
-  
   
 }
 
-exports.apiV1ModelsModelIdSyntaxesSyntaxIdCheckPOST = function(args, res, next) {
+exports.apiV2ModelsModelIdSyntaxesSyntaxIdCheckPOST = function(args, res, next) {
   /**
    * parameters expected in the args:
   * modelId (String)
   * syntaxId (String)
   * data (Filedata)
   **/
+  if(!args.modelId || !args.syntaxId || !args.data) {
+    res.status(400)
+    res.end('All parameters are required');
+  }else {
+    var model = null;
+    for(var m in manifest.models){
+      if(manifest.models[m].id == args.modelId.value){
+        model = manifest.models[m];  
+      }
+    }
+    if(model){
+      var syntax = null;
+      for(var s in model.syntaxes){
+        if(model.syntaxes[s].id == args.syntaxId.value){
+          syntax = model.syntaxes[s];
+        }
+      }
+      if(syntax){
+        operations["check"](args.syntaxId.value, res, args.data.value);
+      }else{
+        res.status(404);
+        res.end('Model with id='+ args.modelId.value + ' has not syntax with id=' + args.syntaxId.value);    
+      }
+    }else{
+      res.status(404);
+      res.end('Model with id='+ args.modelId.value + ' does not exist.');
+    }
+  }  
   
-  
-  var examples = {};
-  examples['application/json'] = {
-  "data" : "aeiou",
-  "annotations" : [ {
-    "severity" : "aeiou",
-    "line" : "",
-    "column" : "",
-    "message" : "aeiou"
-  } ],
-  "message" : "aeiou",
-  "status" : "aeiou"
-};
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+}
+
+exports.apiV2ModelsModelIdSyntaxesSyntaxIdGET = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * modelId (String)
+  * syntaxId (String)
+  **/
+   if(args.modelId) {
+    var model = args.modelId.value;
+    if(manifest){
+      for(var m in manifest.models){
+        if(manifest.models[m].id == model){
+          if(args.syntaxId){
+            var syntax = args.syntaxId.value;
+            for(var s in manifest.models[m].syntaxes){
+              if(manifest.models[m].syntaxes[s].id ==  syntax){
+                 res.json(manifest.models[m].syntaxes[s]); 
+              }
+            }  
+            res.status(404);
+            res.end('Model with id='+ args.modelId.value + ' has not syntax with id=' + args.syntaxId.value);             
+          }else{
+            res.status(400)
+            res.end('{syntaxId} parameter is required');
+          }
+        }
+      }
+      res.status(404);
+      res.end('Model with id='+ model + ' does not exist.')
+    }else{
+      res.status(500);
+      res.end('Something fails. It has not been imposible to load manifest.yaml');
+    }
+
+  }else {
+    res.status(400)
+    res.end('{modelId} parameter is required');
   }
-  else {
-    res.end();
-  }
+  
   
   
 }
 
-exports.apiV1ModelsModelIdSyntaxesSyntaxIdGET = function(args, res, next) {
+exports.apiV2ModelsModelIdSyntaxesSyntaxIdModeGET = function(args, res, next) {
   /**
    * parameters expected in the args:
   * modelId (String)
@@ -65,124 +121,129 @@ exports.apiV1ModelsModelIdSyntaxesSyntaxIdGET = function(args, res, next) {
   **/
   
   
-  var examples = {};
-  examples['application/json'] = {
-  "readOnly" : true,
-  "id" : "aeiou"
-};
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
+  if(args.modelId) {
+    var model = args.modelId.value;
+    if(manifest){
+      for(var m in manifest.models){
+        if(manifest.models[m].id == model){
+          if(args.syntaxId){
+            var syntax = args.syntaxId.value;
+            for(var s in manifest.models[m].syntaxes){
+              if(manifest.models[m].syntaxes[s].id ==  syntax){
+                  res.setHeader('content-type', 'text/plain;chartset=utf-8');
+                  res.send(fs.readFileSync('modes/' + syntax + '/' + manifest.models[m].syntaxes[s].editorModeURI));
+              }
+            }  
+            res.status(404);
+            res.end('Model with id='+ args.modelId.value + ' has not syntax with id=' + args.syntaxId.value);             
+          }else{
+            res.status(400)
+            res.end('{syntaxId} parameter is required');
+          }
+        }
+      }
+      res.status(404);
+      res.end('Model with id='+ model + ' does not exist.')
+    }else{
+      res.status(500);
+      res.end('Something fails. It has not been imposible to load manifest.yaml');
+    }
+
+  }else {
+    res.status(400)
+    res.end('{modelId} parameter is required');
   }
   
   
 }
 
-exports.apiV1ModelsModelIdSyntaxesSyntaxIdModeGET = function(args, res, next) {
+exports.apiV2ModelsModelIdSyntaxesSyntaxIdThemeGET = function(args, res, next) {
   /**
    * parameters expected in the args:
   * modelId (String)
   * syntaxId (String)
   **/
   
-  
-  var examples = {};
-  examples['application/json'] = "aeiou";
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
+  if(args.modelId) {
+    var model = args.modelId.value;
+    if(manifest){
+      for(var m in manifest.models){
+        if(manifest.models[m].id == model){
+          if(args.syntaxId){
+            var syntax = args.syntaxId.value;
+            for(var s in manifest.models[m].syntaxes){
+              if(manifest.models[m].syntaxes[s].id ==  syntax){
+                if(manifest.models[m].syntaxes[s].editorThemeURI){
+                  res.json(manifest.models[m].syntaxes[s].editorThemeURI);
+                }else{
+                  res.json(null); 
+                }
+              }
+            }  
+            res.status(404);
+            res.end('Model with id='+ args.modelId.value + ' has not syntax with id=' + args.syntaxId.value);             
+          }else{
+            res.status(400)
+            res.end('{syntaxId} parameter is required');
+          }
+        }
+      }
+      res.status(404);
+      res.end('Model with id='+ model + ' does not exist.')
+    }else{
+      res.status(500);
+      res.end('Something fails. It has not been imposible to load manifest.yaml');
+    }
+
+  }else {
+    res.status(400)
+    res.end('{modelId} parameter is required');
   }
   
   
 }
 
-exports.apiV1ModelsModelIdSyntaxesSyntaxIdThemeGET = function(args, res, next) {
+exports.apiV2ModelsModelIdSyntaxesSyntaxIdTranslatePOST = function(args, res, next) {
   /**
    * parameters expected in the args:
   * modelId (String)
-  * syntaxId (String)
-  **/
-  
-  
-  var examples = {};
-  examples['application/json'] = "aeiou";
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-  
-}
-
-exports.apiV1ModelsModelIdSyntaxesSyntaxIdTranslateGET = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * modelId (String)
-  * syntaxId (String)
-  * to (String)
-  **/
-  
-  
-  var examples = {};
-  examples['application/json'] = {
-  "readOnly" : true,
-  "id" : "aeiou"
-};
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-  
-}
-
-exports.apiV1ModelsModelIdSyntaxesSyntaxIdTranslatePOST = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * modelId (String)
-  * syntaxId (String)
-  * to (String)
+  * srcSyntaxId (String)
+  * desSyntaxId (String)
   * data (Filedata)
   **/
   
-  
-  var examples = {};
-  examples['application/json'] = {
-  "data" : "aeiou",
-  "annotations" : [ {
-    "severity" : "aeiou",
-    "line" : "",
-    "column" : "",
-    "message" : "aeiou"
-  } ],
-  "message" : "aeiou",
-  "status" : "aeiou"
-};
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  if(args.modelId) {
+    if(manifest){
+      var model = null
+      for(var m in manifest.models){
+        if(manifest.models[m].id == args.modelId.value){
+           model = manifest.models[m];
+        }
+      }
+      if( model){
+        operations["translate"](args.srcSyntaxId.value, args.desSyntaxId.value, res, args.data.value );
+      }else{
+        res.status(404);
+        res.end('Model with id='+ args.modelId.value + ' does not exist'); 
+      }
+    }else{
+      res.status(500);
+      res.end('Something fails. It has not been imposible to load manifest.yaml');
+    }
+
+  }else{
+    res.status(400)
+    res.end('{modelId} parameter is required');
   }
-  else {
-    res.end();
-  }
-  
-  
+
 }
 
+
+function modelHasSyntax (model, syntax){
+  var ret = false;
+  for(var s in model.syntaxes){
+    if(model.syntaxes[s].id == syntax)
+      ret=true;
+  }
+  return ret;
+}
